--- a/google_play_services/google-play-services_lib/res/values-nl/strings.xml
+++ b/google_play_services/google-play-services_lib/res/values-nl/strings.xml
@@ -12,8 +12,8 @@
     <string name="common_google_play_services_update_text" msgid="448354684997260580">"Deze app kan niet worden uitgevoerd, tenzij u Google Play-services bijwerkt."</string>
     <string name="common_google_play_services_network_error_title" msgid="3827284619958211114">"Netwerkfout"</string>
     <string name="common_google_play_services_network_error_text" msgid="9038847255613537209">"Er is een gegevensverbinding nodig om verbinding te kunnen maken met Google Play-services."</string>
-    <string name="common_google_play_services_invalid_account_title" msgid="1066672360770936753">"Ongeldig account"</string>
-    <string name="common_google_play_services_invalid_account_text" msgid="4983316348021735578">"Het gespecificeerde account bestaat niet op dit apparaat. Kies een ander account."</string>
+    <string name="common_google_play_services_invalid_account_title" msgid="1066672360770936753">"Ongeldig accountName"</string>
+    <string name="common_google_play_services_invalid_account_text" msgid="4983316348021735578">"Het gespecificeerde accountName bestaat niet op dit apparaat. Kies een ander accountName."</string>
     <string name="common_google_play_services_unknown_issue" msgid="4762332809710093730">"Onbekend probleem met Google Play-services."</string>
     <string name="common_google_play_services_unsupported_title" msgid="6334768798839376943">"Google Play-services"</string>
     <string name="common_google_play_services_unsupported_text" msgid="3542578567569488671">"Google Play-services, dat vereist is voor een aantal van uw applicaties, wordt niet ondersteund door uw apparaat. Neem contact op met de fabrikant voor ondersteuning."</string>
