--- a/google_play_services/google-play-services_lib/res/values-it/strings.xml
+++ b/google_play_services/google-play-services_lib/res/values-it/strings.xml
@@ -13,7 +13,7 @@
     <string name="common_google_play_services_network_error_title" msgid="3827284619958211114">"Errore di rete"</string>
     <string name="common_google_play_services_network_error_text" msgid="9038847255613537209">"È necessaria una connessione dati per connettersi a Google Play Services."</string>
     <string name="common_google_play_services_invalid_account_title" msgid="1066672360770936753">"Account non valido"</string>
-    <string name="common_google_play_services_invalid_account_text" msgid="4983316348021735578">"L\'accountName specificato non esiste su questo dispositivo. Scegli un altro accountName."</string>
+    <string name="common_google_play_services_invalid_account_text" msgid="4983316348021735578">"L\'userAccountName specificato non esiste su questo dispositivo. Scegli un altro userAccountName."</string>
     <string name="common_google_play_services_unknown_issue" msgid="4762332809710093730">"Problema sconosciuto con Google Play Services."</string>
     <string name="common_google_play_services_unsupported_title" msgid="6334768798839376943">"Google Play Services"</string>
     <string name="common_google_play_services_unsupported_text" msgid="3542578567569488671">"La piattaforma Google Play Services, su cui sono basate alcune delle tue applicazioni, non è supportata dal dispositivo in uso. Per assistenza, contatta il produttore."</string>
